@@ -27,7 +27,7 @@ screamshotter = git https://github.com/makinacorpus/django-screamshot.git branch
 convertit = git https://github.com/makinacorpus/convertit.git rev=0b537dee184da67e7cd5d07d48f8b65968684ad2
 paperclip = git https://github.com/makinacorpus/django-paperclip.git
 # Still under development
-mapentity = git https://github.com/makinacorpus/Geotrek.git rev=d0c34636af38b91f88c30ce1efbbd13eb731a01d
+mapentity = git https://github.com/makinacorpus/Geotrek.git rev=129243a0c36c429570aaeaf4f4ea3f661830f70b
 
 [gdal-bindings]
 recipe = zc.recipe.egg:custom
